add post sitter functionalities